# confidential-agent

./: .gitignore  Cargo.toml  Makefile  README.md
cai-pep/: Cargo.toml
cai-pep/src/: main.rs
cli/: Cargo.toml
cli/src/: app.rs  cli.rs  main.rs
cli/src/app/: commands.rs  debug_ssh.rs  guest_assets.rs  publish.rs  report.rs  self_describe.rs  state.rs  tests.rs  tools.rs  workflows.rs
core/: Cargo.toml
core/src/: a2a.rs  agent_card.rs  agent_card_fetch.rs  agent_card_signing.rs  lib.rs  mesh.rs  peerings.rs  schema.rs  spec.rs  util.rs
core/tests/: a2a_state_lifecycle.rs  peering_mesh_flow.rs  spec_to_agent_card.rs
daemon/: Cargo.toml
daemon/src/: app.rs  cli.rs  main.rs
daemon/src/app/: tests.rs
docs/: Confidential MaaS：构建可验证的推理链路数据密态流转.md  a2a.md  agent-tool-sandbox-design.md  architecture.md  cmaas.md  openclaw-cli-step-by-step.md  security-coverage.md  spec.md  testing-review.md
docs/confidential-agent-architecture/: README.md
docs/confidential-agent-architecture/assets/: README.md
docs/openclaw-one-click-best-practice/: README.md
docs/research/proposals/: cmaas-demo.md  cmaas.md
examples/a2a-data-collab/: install-agent.sh
examples/a2a-data-collab/files/: agent-server.mjs  private-risk-data.jsonl
examples/cmaas/: README.md  agent-config.json  agent.yaml  cmaas.yaml  install-agent.sh  install-cmaas.sh
examples/cmaas/files/: agent-client.mjs  cmaas-access-proxy.mjs
examples/mcp/: install-mcp.sh  mcp-demo.yaml
examples/openclaw/: install-openclaw.sh  openclaw.json  openclaw.yaml
examples/openclaw-vllm/: cai-nvidia-cc-stack-install.sh  install-openclaw-vllm.sh  nvidia-persistenced.service  openclaw-vllm.json  openclaw-vllm.yaml
examples/openclaw/files/: install-cai-pep.sh  install-openclaw-runtime.sh  patch-openclaw-cai-pep.js  tdx-remote-attestation.SKILL.md
examples/openclaw/files/cai-a2a-plugin/: index.js  openclaw.plugin.json  package.json
gateway/: Cargo.toml
gateway/src/: lib.rs  main.rs
hack/: coverage.sh  libtdx-verify-1.22-4.al8.x86_64.rpm  test-report.sh
image/: build.sh  env.sh
image/customize/files/: cai-pep-default-policy.json  cai-pep-preload-image.sh  patch-openclaw-cai-pep.js
image/customize/files/cai-pep-plugin/: index.js  package.json  (+1 more)
image/customize/script/: 01-install-base.sh  10-install-attestation.sh  11-install-tng.sh  13-install-secret-supplicant.sh  14-install-mesh-daemon.sh  15-install-local-trustee.sh  90-configure-service.sh  99-cleanup.sh
image/disk-crypt/: fde.toml
image/profiles/mcp/: 50-install-app.sh  profile.json
image/profiles/openclaw/: 50-install-app.sh  profile.json
image/profiles/openclaw-vllm/: 50-install-app.sh  profile.json
one-click/: install.sh
one-click/lib/: common.sh  credentials.sh  deploy.sh  deps-alinux.sh  main.sh  openclaw.sh
shelter/: Cargo.toml
shelter/src/: lib.rs  tests.rs
shelter/tests/: spec_to_build_config.rs
skills/confidential-agent-operator/: SKILL.md
skills/confidential-agent-operator/agents/: openai.yaml
skills/confidential-agent-operator/references/: appspec.md  migration.md  ops.md  security.md
terraform/: main.tf  outputs.tf  terraform.rc  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/service/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/trustee/: main.tf  user-data.sh.tftpl  variables.tf
tools/: Dockerfile  sgx_default_qcnl.conf
tools/e2e/: README.md  openclaw-a2a-responses-probe.mjs  openclaw-chat-probe.mjs  render_case.py  run-cmaas-e2e.sh  run-openclaw-a2a-e2e.sh  run-openclaw-bailian-e2e.sh  run-openclaw-vllm-e2e.sh  run.sh  test-a2a-peer-discovery.sh  test-aliyun-profile-preflight.sh  test-openclaw-cai-pep-patcher.sh  test-openclaw-vllm-bootstrap.sh  test-signal-finalizer.sh  test-status-live-ssh-info.sh
tools/e2e/lib/: common.sh
tools/e2e/probes/: a2a-data-collab-probe.mjs  openclaw-a2a-responses-probe.mjs  openclaw-chat-probe.mjs
tools/eval/skill-migration/: collect-hk-skill-v2-eval.sh  grade-trial.mjs  run-hermes-heldout-eval.sh  shell-agent-runner.mjs  summarize-results.mjs  test-evidence-patterns.mjs
tools/policies/: trustee-opa-default.rego  trustee-opa-local-dev.rego
(+38 files in other folders)
