[workspace]
members = [
    "cai-pep",
    "core",
    "shelter",
    "cli",
    "daemon",
    "gateway",
]
default-members = ["cai-pep", "core", "shelter", "cli", "daemon", "gateway"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"
version = "0.1.0"

[workspace.dependencies]
anyhow = "=1.0.79"
base64 = "=0.22.1"
clap = { version = "=4.4.18", features = ["derive", "env"] }
ctrlc = { version = "=3.4.4", features = ["termination"] }
curve25519-dalek = { version = "=4.1.3", default-features = false, features = ["alloc", "precomputed-tables", "zeroize"] }
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }
serde = { version = "=1.0.196", features = ["derive"] }
serde_json = "=1.0.113"
serde_yaml = "=0.9.31"
sha2 = "=0.10.8"
rand_core = { version = "=0.6.4", features = ["getrandom"] }
tempfile = "=3.10.1"
ureq = { version = "=2.12.1", default-features = false, features = ["tls"] }
libc = "=0.2.186"
