[package]
name = "confidential-agent-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "confidential-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
confidential-agent-core = { path = "../core" }
confidential-agent-shelter = { path = "../shelter" }
curve25519-dalek.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
