[package]
name = "confidential-agent-core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
