[package]
name = "confidential-agentd"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "confidential-agentd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
confidential-agent-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
