[package]
name = "cai-gateway"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "cai-gateway"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
ctrlc.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
